<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BG"
    android:animateLayoutChanges="true"
    >
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="Sign Up"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/backarrow"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/para1"
        android:text="@string/set_up_your_profile"
        style="@style/Heading1"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:id="@+id/para1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/lets_get_started_creating_your_hudle_up_profile"
        style="@style/Paragraph1"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/para1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="75dp"
        app:layout_constraintHeight_min="50dp"
        android:autofillHints="name"
        android:id="@+id/firstnameEditTxt"
        style="@style/editText"
        android:hint="@string/first_name"
        android:maxLength="25"
        android:background="@drawable/rounded_edittext_states"
        android:inputType="textAutoComplete"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxLength="25"
        app:layout_constraintTop_toBottomOf="@id/firstnameEditTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="75dp"
        app:layout_constraintHeight_min="50dp"
        android:autofillHints="name"
        android:id="@+id/lastnameEditTxt"
        style="@style/editText"
        android:hint="@string/last_name"
        android:background="@drawable/rounded_edittext_states"
        android:inputType="textPersonName"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/lastnameEditTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="75dp"
        app:layout_constraintHeight_min="50dp"
        android:maxLength="50"
        android:autofillHints="emailAddress"
        android:id="@+id/emailEditTxt"
        style="@style/editText"
        android:hint="@string/email_str"
        android:background="@drawable/rounded_edittext_states"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/emailEditTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="75dp"
        app:layout_constraintHeight_min="50dp"
        android:id="@+id/ageEditTxt"
        android:maxLength="2"
        style="@style/editText"
        android:hint="@string/age_18"
        android:background="@drawable/rounded_edittext_states"
        android:inputType="number"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/ageEditTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="75dp"
        app:layout_constraintHeight_min="50dp"
        android:autofillHints="emailAddress"
        android:id="@+id/password1EditTxt"
        android:maxLength="25"
        style="@style/editText"
        android:hint="@string/password"
        android:background="@drawable/rounded_edittext_states"
        android:inputType="textPassword"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/password1EditTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="75dp"
        app:layout_constraintHeight_min="50dp"
        android:autofillHints="emailAddress"
        android:id="@+id/password2EditTxt"
        style="@style/editText"
        android:maxLength="25"
        android:hint="@string/confirm_password"
        android:background="@drawable/rounded_edittext_states"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signUp_btn"
        android:layout_marginTop="10dp"
        app:layout_constraintHeight_max="100dp"
        app:layout_constraintHeight_min="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/password2EditTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/primaryBtn"
        android:text="@string/sign_up"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:indeterminate="false"
        android:progressTint="@color/Btn_Text"
        android:max="100"
        android:progress="0"
        app:layout_constraintTop_toTopOf="@id/signUp_btn"
        app:layout_constraintStart_toStartOf="@id/signUp_btn"
        app:layout_constraintEnd_toEndOf="@id/signUp_btn" />
    <ImageView
        android:id="@+id/tickImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_check_24"
        android:visibility="invisible"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="@id/signUp_btn"
        app:layout_constraintStart_toStartOf="@id/signUp_btn"
        app:layout_constraintEnd_toEndOf="@id/signUp_btn"
        app:layout_constraintBottom_toBottomOf="@id/signUp_btn"
        app:tint="@android:color/white" />





</androidx.constraintlayout.widget.ConstraintLayout>